<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hello Aloe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="addNewPlant">Click to add a new plant</string>
    <string name ="directions">Add your house plant and activate. Hello Aloe will reminded you to water your plants</string>
    <string name ="listViewHeader">Your Plants</string>
    <string name="homeScreenHeader">Hello Aloe</string>
    <string name="seasonScreenHeader">Hi there!</string>
    <string name ="addScreenHeadTxt">add a plant</string>
    <string name="plant_type_dsc">What kind of plant do you have?</string>
    <string name="plant_nickName_dsc">Do you have a name for your plant?  If so add it here, but it’s not required.</string>
    <string name="waterSchedule_dsc">Water Frequency</string>
    <string name="last_date_dsc">last watered</string>
    <string name="plantNameHint">enter plant type</string>
    <string name="nicknameHint">plant nickname</string>
    <string name="addPlantSubTitle">add details below</string>
    <string name="seasonIntro">Before we begin...</string>
    <string name="seasonContinue">continue</string>
    <string name="winterStatement">During winter, some plant species go dormant and require less watering.</string>
    <string name="seasonSelector">Select an image below that represents a typical winter where you live.</string>
    <string name="customnotificationticker">Your plant may be thirsty</string>
</resources>